# ReplayKit

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  architecture.md  delivery-plan.md  docker-compose.yml  product.md  replay-semantics.md
.github/workflows/: docker.yml  rust.yml  web.yml
agent-instructions/: api-worktree.md  sdk-worktree.md  web-worktree.md  writepath-worktree.md
apps/web/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
apps/web/e2e/: smoke.spec.ts
apps/web/src/: App.tsx  app.css  main.tsx  types.ts  utils.ts
apps/web/src/__tests__/: components.test.tsx  live-provider.test.ts  mock-data.test.ts  mock-provider.test.ts  useAppState.test.tsx
apps/web/src/components/: ArtifactViewer.tsx  BranchDraft.tsx  DiffSummary.tsx  ErrorBoundary.tsx  FailureNav.tsx  Layout.tsx  RunList.tsx  RunTree.tsx  SpanInspector.tsx  StatusBadge.tsx  TimelineView.tsx
apps/web/src/data/: mock-data.ts
apps/web/src/hooks/: useAppState.ts
apps/web/src/providers/: index.ts
apps/web/src/utils/: binary.ts  format.ts
crates/api/: Cargo.toml
crates/api/src/: errors.rs  lib.rs  server.rs  views.rs
crates/api/tests/: route_tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/collector/: Cargo.toml
crates/collector/src/: lib.rs  server.rs
crates/core-model/: Cargo.toml
crates/core-model/src/: lib.rs
crates/diff-engine/: Cargo.toml
crates/diff-engine/src/: lib.rs
crates/replay-engine/: Cargo.toml
crates/replay-engine/src/: executors.rs  lib.rs
crates/sdk-rust-tracing/: Cargo.toml
crates/sdk-rust-tracing/src/: helpers.rs  layer.rs  lib.rs  sink.rs
crates/storage/: Cargo.toml
crates/storage/src/: blob.rs  lib.rs
examples/coding-agent/: Cargo.toml
examples/coding-agent/src/: main.rs
fixtures/golden-runs/: Cargo.toml
fixtures/golden-runs/src/: lib.rs
scripts/: seed-stack-run.sh  smoke-test.sh
