[package]
name = "replaykit-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "replaykit_api"
path = "src/lib.rs"

[dependencies]
replaykit-core-model = { path = "../core-model" }
replaykit-storage = { path = "../storage" }
replaykit-collector = { path = "../collector" }
replaykit-replay-engine = { path = "../replay-engine" }
replaykit-diff-engine = { path = "../diff-engine" }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
axum-test = "17"
