[package]
name = "replaykit-collector"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "replaykit_collector"
path = "src/lib.rs"

[dependencies]
replaykit-core-model = { path = "../core-model" }
replaykit-storage = { path = "../storage" }
