[package]
name = "replaykit-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "replaykit_storage"
path = "src/lib.rs"

[dependencies]
replaykit-core-model = { path = "../core-model" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
