[package]
name = "replaykit-fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "replaykit_fixtures"
path = "src/lib.rs"

[dependencies]
replaykit-core-model = { path = "../../crates/core-model" }
replaykit-storage = { path = "../../crates/storage" }
replaykit-sdk-rust-tracing = { path = "../../crates/sdk-rust-tracing" }
serde_json = "1"
